--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
-matplotlib==3.0.3
-pandas==0.24.2
 urllib3==1.25.8
 graphviz==0.13.2
 psycopg2==2.8.4
