--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==1.1.1
 Flask-SQLAlchemy==2.4.1
+SQLAlchemy==1.3.13
 gunicorn==20.0.4
 urllib3==1.25.8
 graphviz==0.13.2
 psycopg2==2.8.4
+Werkzeug==0.16.1
